# nexuslog-lib

./: Cargo.toml  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
benches/: bench_lazy.py  bench_python.py  micro.py
python/nexuslog/: __init__.py  _logger.pyi
python/tests/: test_basic_config.py  test_lazy_format.py
src/: lib.rs
