[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nexuslog-lib"
version = "0.6.0"
description = "Fast async logger with Python bindings"
readme = "README.md"
license = "MIT"
authors = [{ name = "river-walras" }]
requires-python = ">=3.11"
keywords = ["logging", "async", "fast", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/river-walras/nexuslogger"
Repository = "https://github.com/river-walras/nexuslogger"
Issues = "https://github.com/river-walras/nexuslogger/issues"

[dependency-groups]
benchmark = [
    "loguru>=0.7.3",
    "logxide",
    "matplotlib>=3.10.8",
    "picologging>=0.9.3",
    "spdlog>=2.0.6",
]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "nexuslog._logger"
